Bug 912152 - Improve mechanism for bailing out from Ion compilation of scripts with try-finally, r=jandem.