js/src/jit/Ion.cpp
@@ -1599,12 +1599,6 @@ IonCompile(JSContext *cx, JSScript *script,
     if (!script->ensureRanAnalysis(cx))
         return AbortReason_Alloc;
 
-    // Try-finally is not yet supported.
-    if (script->analysis()->hasTryFinally()) {
-        IonSpew(IonSpew_Abort, "Has try-finally.");
-        return AbortReason_Disable;
-    }
-
     LifoAlloc *alloc = cx->new_<LifoAlloc>(BUILDER_LIFO_ALLOC_PRIMARY_CHUNK_SIZE);
     if (!alloc)
         return AbortReason_Alloc;
